--- a/src/components/Factrak/FactrakComment/FactrakComment.module.scss
+++ b/src/components/Factrak/FactrakComment/FactrakComment.module.scss
@@ -4,7 +4,7 @@
 
 .commentCard {
   border-radius: 0px 10px 10px 0px;
-  box-shadow: 0 $px-2 $px-3 rgba(0, 0, 0, 0.3);
+  box-shadow: 0 $px-2 $px-2 rgba(0, 0, 0, 0.25);
   border-left: $px-4 solid transparent;
   padding-right: $px-5;
 }
