--- a/src/components/Factrak/FactrakHome/FactrakHome.module.scss
+++ b/src/components/Factrak/FactrakHome/FactrakHome.module.scss
@@ -21,14 +21,15 @@
 
 .departmentCard {
   background: $cool-gray-0;
-  box-shadow: 0 $px-2 $px-3 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 $px-2 $px-2 rgba(0, 0, 0, 0.25);
   padding: $px-7 0 $px-7 $px-7;
 }
 
 .depListItem {
   color: $primary-4;
-  font-size: $f-1;
+  font-size: $px-5;
   font-weight: 300;
+  line-height: 22px;
 }
 
 /****** Comment Styling *********/
